Fixed contrast issues

--- a/src/components/style/style.scss
+++ b/src/components/style/style.scss
@@ -23,7 +23,7 @@ $primary-invert: #fff;
 // Use the existing orange as the danger color
 $danger: $orange;
 $warning: #FBD1A2;
-$info: #00B2CA;
+$info: #2D7AB9;
 $family-primary: $family-mono;
 $shadow: "";
 $card-shadow: "";
